--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="cnt2">
 
         <h2><img src="img/icons/pen.png" alt="pen">Sobre mim</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia fugit similique et. Deserunt nemo provident iure cum commodi, reiciendis earum qui? Unde, quibusdam quos explicabo alias optio mollitia ad quasi!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias earum sit harum. Ab atque hic, voluptate placeat est autem natus voluptatum eos cupiditate expedita eius, eligendi vitae, laboriosam voluptatem quasi?</p>
+        <p>Atualmente estou cursando Ciência da computação e a cada dia aprendendo mais e mais coisas novas, busco me profissionalizar na área. Estou muito animado e quero conhecer pessoas novas pra que eu poça tirar minhas dúvidas, pedir ajuda e também que possamos aprender juntos.</p>
 
       </div>
 
@@ -71,7 +71,7 @@
         <div class="contac">
           <img src="img/icons/phone.png" alt="phone">
           <h3>Telefone</h3>
-          <p>(11) 9999-9999</p>
+          <p>(11) 96591-1457</p>
         </div>
 
       </div>
@@ -159,14 +159,14 @@
         <div class="srv1">
 
           <img src="img/icons/services/computer.png" alt="Computer">
-          <h3>Criação <br> de sites</h3>
+          <h3>Criação<br>de sites</h3>
 
         </div>
         
         <div class="srv2">
 
           <img src="img/icons/services/smartphone.png" alt="phone">
-          <h3>Sites <br> responsivos </h3>
+          <h3>Sites<br>responsivos </h3>
 
         </div>
 
