--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Olá, eu sou o <br> Douglas Sá </h1>
         <p>Desenvolvedor Front-end</p>
         <button class="bttn">
-          <span><a href="cv/currículo.pdf" download="Curricúlo">Download CV</a></span>
+          <span><a href="cv/currículo.pdf" download="Currículo">Download CV</a></span>
         </button>
       </div>
       
@@ -47,7 +47,7 @@
       <div class="cnt2">
 
         <h2><img src="img/icons/pen.png" alt="pen">Sobre mim</h2>
-        <p>Atualmente estou cursando Ciência da computação e a cada dia aprendendo mais e mais coisas novas, busco me profissionalizar na área. Estou muito animado e quero conhecer pessoas novas pra que eu poça tirar minhas dúvidas, pedir ajuda e também que possamos aprender juntos.</p>
+        <p>Atualmente estou cursando Ciência da computação e a cada dia aprendendo mais e mais coisas novas, busco me profissionalizar na área. Estou muito animado e quero conhecer pessoas novas pra que eu possa tirar minhas dúvidas, pedir ajuda e também que possamos aprender juntos.</p>
 
       </div>
 
